[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Dialog/DialogBox/DialogBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Dialog/PreviewDialogConfig.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PreviewDialogConfig" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" parent="." instance=ExtResource( 1 )]
mouse_filter = 2

[node name="HBoxContainer" parent="Main/Dialog/MessageMarginContainer" index="0"]
mouse_filter = 2

[node name="Face" parent="Main/Dialog/MessageMarginContainer/HBoxContainer" index="0"]
mouse_filter = 2

[node name="MessageBox" parent="Main/Dialog/MessageMarginContainer/HBoxContainer" index="1"]
visible = false
mouse_filter = 2

[node name="NameBoxLeft" parent="Main" index="1"]
mouse_filter = 2

[node name="NameBoxRight" parent="Main" index="2"]
mouse_filter = 2

[node name="full_character_images" parent="Main" index="3"]
mouse_filter = 2

[node name="FullCharacterImages" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="visibility_changed" from="." to="." method="_on_PreviewDialogConfig_visibility_changed"]
[connection signal="gui_input" from="Main/Dialog/MessageMarginContainer" to="." method="_on_MessageMarginContainer_gui_input"]
[connection signal="text_processed" from="Main/Dialog/MessageMarginContainer/HBoxContainer/MessageBox" to="." method="_on_MessageBox_text_processed"]

[editable path="Main"]
